--- a/Views/Category/Delete.cshtml
+++ b/Views/Category/Delete.cshtml
@@ -4,23 +4,21 @@
     <input asp-for="Id" hidden />
     <div class="p-3 mt-4 border">
         <div class="row pt-4 pb-2">
-            <h2 class="text-success">Edit Category</h2>
+            <h2 class="text-success">Delete Category</h2>
             <hr />
         </div>
-        <div class="text-bg-danger" asp-validation-summary="All"></div>
-        <div class="mb-3 row p-1">
+        <div class="mb-3 row">
             <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <input asp-for="Name" disabled class="form-control" />
+           
         </div>
         <div class="mb-3 row">
             <label class="p-0" asp-for="DisplayOrder"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+            <input asp-for="DisplayOrder" disabled class="form-control" />
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-success form-control">Update</button>
+                <button type="submit" class="btn btn-danger form-control">Delete</button>
             </div>
             <div class="col-6 col-md-3">
 
@@ -33,8 +31,4 @@
     </div>
 </form>
 
-@section Scripts {
-    @{
-        <partial name="_ValidationScriptsPartial" />
-    }
-}
+
