--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<Category>
+<partial name="_Notification"/>
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
@@ -36,7 +37,7 @@
                         <a asp-controller="Category" asp-route-id ="@obj.Id" asp-action="Edit" class="btn btn-outline-success mx-2">
                             <i class="bi bi-pencil-square"></i> Edit
                         </a>
-                            <a asp-controller="Category" asp-action="Delete" class="btn btn-outline-danger mx-2">
+                            <a asp-controller="Category" asp-route-id="@obj.Id" asp-action="Delete" class="btn btn-outline-danger mx-2">
                                 <i class="bi bi-trash-fill"></i> Delete
                             </a>
                         </div>
