--- a/Views/Category/Create.cshtml
+++ b/Views/Category/Create.cshtml
@@ -1,23 +1,28 @@
 ﻿@model Category
 
-<form method="post">
-<div class="p-3 mt-4 border">
-    <div class="row pt-4 pb-2">
-            <h2 class="text-success">Create New Category</h2>
-            <hr />
+<div class="card mt-4 border-0 shadow">
+    <div class="card-header bg-secondary bg-light mt-8 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-success">Create New Category</h2
+            </div>
         </div>
+    </div>
+    <div class="card-body p-4">
+        <form method="post" class="row">
+<div class="p-3 border">
         <div class="text-bg-danger" asp-validation-summary="All"></div>
-        <div class="mb-3 row">
-            <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
+        <div class="form-floating py-2 col-12">
+            <input asp-for="Name" class="form-control border-0 shadow" />
+            <label asp-for="Name" class="ms-2"></label>
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
-        <div class="mb-3 row">
-            <label class="p-0" asp-for="DisplayOrder"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
+        <div class="form-floating py-2 col-12">
+            <input asp-for="DisplayOrder" class="form-control border-0 shadow" />
+            <label asp-for="DisplayOrder" class="ms-2" ></label>
             <span asp-validation-for="DisplayOrder" class="text-danger"></span>
             </div>
-        <div class="row">
+        <div class="row pt-2">
             <div class="col-6 col-md-3">
                 <button type="submit" class="btn btn-success form-control">Create</button>
             </div>
@@ -31,6 +36,10 @@
         </div>
     </div>
 </form>
+    </div>
+</div>
+
+
 
 @section Scripts{
     @{
