--- a/Views/Category/Delete.cshtml
+++ b/Views/Category/Delete.cshtml
@@ -1,22 +1,26 @@
 ﻿@model Category
 
-<form method="post">
+<div class="card mt-4 border-0 shadow">
+    <div class="card-header bg-secondary bg-light mt-8 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-success">Delete Category</h2
+            </div>
+        </div>
+    </div>
+    <div class="card-body p-4">
+        <form method="post">
     <input asp-for="Id" hidden />
     <div class="p-3 mt-4 border">
-        <div class="row pt-4 pb-2">
-            <h2 class="text-success">Delete Category</h2>
-            <hr />
+         <div class="form-floating py-2 col-12">
+            <input asp-for="Name" disable class="form-control border-0 shadow" />
+            <label asp-for="Name" class="ms-2"></label>
         </div>
-        <div class="mb-3 row">
-            <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" disabled class="form-control" />
-           
+         <div class="form-floating py-2 col-12">
+            <input asp-for="DisplayOrder" disable class="form-control border-0 shadow" />
+            <label asp-for="DisplayOrder" class="ms-2"></label>
         </div>
-        <div class="mb-3 row">
-            <label class="p-0" asp-for="DisplayOrder"></label>
-            <input asp-for="DisplayOrder" disabled class="form-control" />
-        </div>
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-6 col-md-3">
                 <button type="submit" class="btn btn-danger form-control">Delete</button>
             </div>
@@ -30,5 +34,9 @@
         </div>
     </div>
 </form>
+    </div>
+</div>
+
+
 
 
