--- a/Views/Category/Edit.cshtml
+++ b/Views/Category/Edit.cshtml
@@ -1,24 +1,27 @@
 ﻿@model Category
 
-<form method="post">
+<div class="card mt-4 border-0 shadow">
+    <div class="card-header bg-secondary bg-light mt-8 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-success">Edit Category</h2
+            </div>
+        </div>
+    </div>
+    <div class="card-body p-4">
+        <form method="post">
     <input asp-for="Id" hidden />
     <div class="p-3 mt-4 border">
-        <div class="row pt-4 pb-2">
-            <h2 class="text-success">Edit Category</h2>
-            <hr />
-        </div>
         <div class="text-bg-danger" asp-validation-summary="All"></div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+        <div class="form-floating py-2 col-12">
+            <input asp-for="Name" disable class="form-control border-0 shadow" />
+            <label asp-for="Name" class="ms-2"></label>
         </div>
-        <div class="mb-3 row">
-            <label class="p-0" asp-for="DisplayOrder"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+         <div class="form-floating py-2 col-12">
+            <input asp-for="DisplayOrder" disable class="form-control border-0 shadow" />
+            <label asp-for="DisplayOrder" class="ms-2"></label>
         </div>
-        <div class="row">
+        <div class="row mt-3">
             <div class="col-6 col-md-3">
                 <button type="submit" class="btn btn-success form-control">Update</button>
             </div>
@@ -32,6 +35,10 @@
         </div>
     </div>
 </form>
+    </div>
+</div>
+
+
 
 @section Scripts {
     @{
