--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,9 +1,16 @@
 ﻿@model List<Category>
 
-<div class="container">
-    <div class="row pt-4 pb-3">
+    <div class="card mt-4 border-0 shadow">
+    <div class="card-header bg-secondary bg-light mt-8 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-success">Category List</h2
+            </div>
+        </div>
+    </div>
+    <div class="card-body p-4">
+    <div class="row pb-3">
         <div class="col-6">
-            <h2 class="text-success">Category List</h2>
         </div>
         <div class="col-6 text-end">
             <a asp-controller="Category" asp-action="Create" class="btn btn-success">
@@ -47,3 +54,5 @@
     </tbody>
 </table>
 </div>
+</div>
+
