--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="col-6">
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Product" asp-action="Create" class="btn btn-success">
+            <a asp-controller="Product" asp-action="Upsert" class="btn btn-success">
                 <i class="bi bi-plus-circle"></i> Create New Product
             </a>
         </div>
@@ -61,7 +61,7 @@
                 <td>@obj.Price100</td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Product" asp-route-id ="@obj.Id" asp-action="Edit" class="btn btn-outline-success mx-2">
+                        <a asp-controller="Product" asp-route-id ="@obj.Id" asp-action="Upsert" class="btn btn-outline-success mx-2">
                             <i class="bi bi-pencil-square"></i> Edit
                         </a>
                             <a asp-controller="Product" asp-route-id="@obj.Id" asp-action="Delete" class="btn btn-outline-danger mx-2">
