--- a/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,7 +11,10 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <input asp-for="Product.Id" hidden />
-<div class="p-3 border">
+            <input asp-for="Product.ImageUrl" hidden />
+            <div class="row">
+                <div class="col-10">
+                    <div class="p-3 border">
         <div class="text-bg-danger" asp-validation-summary="All"></div>
         <div class="form-floating py-2 col-12">
             <input asp-for="Product.Title" class="form-control border-0 shadow" />
@@ -64,7 +67,7 @@
             <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
         </div>
         <div class="form-floating py-2 col-12">
-            <input type="file" class="form-control border-0 shadow" />
+            <input type="file" name="file" class="form-control border-0 shadow" />
             <label asp-for="Product.ImageUrl" class="ms-2"></label>
             <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
         </div>
@@ -88,6 +91,14 @@
             
         </div>
     </div>
+                </div>
+                <div class="col-2">
+                    <img src="@Model.Product.ImageUrl" width="100%"
+                    style="border-radius:5px border:1px solid #bbb9b9" />
+                </div>
+
+            </div>
+
 </form>
     </div>
 </div>
