--- a/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Areas/Admin/Views/Product/Upsert.cshtml
@@ -71,6 +71,11 @@
             <label asp-for="Product.ImageUrl" class="ms-2"></label>
             <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
         </div>
+        <div class="form-floating py-2 col-12">
+            <img src="@Model.Product.ImageUrl" width="10%"
+style="border-radius:5px border:1px solid #bbb9b9" />
+            <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
+        </div>
         <div class="row pt-2">
             <div class="col-6 col-md-3">
                 @if(Model.Product.Id != 0)
@@ -110,8 +115,8 @@
         <script>
   tinymce.init({
     selector: 'textarea',
-    plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage advtemplate ai mentions tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss markdown',
-    toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+    plugins: 'anchor autolink charmap codesample emoticons image lists searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage advtemplate ai mentions tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss markdown',
+    toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap',
     tinycomments_mode: 'embedded',
     tinycomments_author: 'Author name',
     mergetags_list: [
