--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-<table id="tblData" class="table-bordered table-striped table">
+<table id="tblData" class="table table-bordered table-striped mt-3" style="width:100%">
     <thead>
     <tr>
         <th>
@@ -53,5 +53,5 @@
 </div>
 
 @section Scripts{
-    <script src="~/js//product.js"></script>
+    <script  type="text/javascript" src="~/js/product.js"></script>
 }
