Edit Product Link in DataTable

--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -53,5 +53,5 @@
 </div>
 
 @section Scripts{
-    <script  type="text/javascript" src="~/js/product.js"></script>
+    <script  src="~/js/product.js"></script>
 }
