--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -19,7 +19,9 @@
         </div>
     </div>
 
-<table id="tblData" class="table table-bordered table-striped mt-3" style="width:100%">
+    <div class="container " >
+        
+<table style="width:100%" id="tblData" class="table table-bordered table-striped mt-3">
     <thead>
     <tr>
         <th>
@@ -49,6 +51,8 @@
     </tr>
     </thead>
 </table>
+    </div>
+
 </div>
 </div>
 
