--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,14 +9,7 @@
     <link rel="stylesheet" href="~/BulkyWeb.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
-    <script src="https://code.jquery.com/jquery.3.3.1.js"></script>
-    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js" defer></script>
-    <link rel="stylesheet" href="/DataTables/datatables.css" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.min.css" />
-    <script type="text/javascript" src="~/Scripts/jquery.js"></script>
-    
-
-
+    <link rel="stylesheet" href="/lib/dataTables/datatables.css" />
 </head>
 <body>
     <header>
@@ -68,10 +61,13 @@
             &copy; 2024 - Made with <i class="bi bi-hearts"></i> By Pundit Zone Ltd - <a asp-area="" asp-controller="Home" asp-action="Privacy"> Privacy </a>
         </div>
     </footer>
-    <script src="https://cdn.tiny.cloud/1/cwpj38u9ctoinu3obzludvloeyswm6v4683w0fxm97yv81x5/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <script src="~/lib/jquery/jQuery v3.7.1.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/dataTables/datatables.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/cwpj38u9ctoinu3obzludvloeyswm6v4683w0fxm97yv81x5/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
