--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,11 +1,35 @@
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+
+nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    color: #fff;
+    background-color : #1b6ec2;
+    border-color: #1861ac;
+}
+
 html {
   font-size: 14px;
 }
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='coral' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+/*.navbar-toggler {
+    border: 2px solid coral;
+}*/
 
 @media (min-width: 768px) {
   html {
     font-size: 16px;
   }
+}
+
+.border-top{
+    border: 1px solid #e5e5e5;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
