--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -29,7 +29,7 @@
                         <label asp-for="Input.ConfirmPassword" class="ms-2 text-muted">Confirm Password</label>
                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
+                    <div class="form-floating mb-3 col-md-6">
                         <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
                             <option disabled selected> -- Select Role -- </option>
                         </select>
@@ -41,8 +41,14 @@
             </div>
             <div class="col-md-12 pt-4">
                 <section>
+
+                    <div class="divider">
+                        <span></span>
+                        <span> Or continue with </span>
+                        <span></span>
+                        </div>
+
                     <h3 border-bottom pb-3 mb-4 text-secondary text-center>Use another service to register.</h3>
-                    <hr />
                     @{
                         if ((Model.ExternalLogins?.Count ?? 0) == 0)
                         {
