Added Company Model

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -70,24 +70,24 @@ body {
         }
 
         .divider span:first-child { /* color changes in here */
-            background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#000));
-            background-image: -webkit-linear-gradient(180deg, transparent, #000);
-            background-image: -moz-linear-gradient(180deg, transparent, #000);
-            background-image: -o-linear-gradient(180deg, transparent, #000);
-            background-image: linear-gradient(90deg, transparent, #000);
+            background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#96958d));
+            background-image: -webkit-linear-gradient(180deg, transparent, #96958d);
+            background-image: -moz-linear-gradient(180deg, transparent, #96958d);
+            background-image: -o-linear-gradient(180deg, transparent, #96958d);
+            background-image: linear-gradient(90deg, transparent, #96958d);
         }
 
         .divider span:nth-child(2) {
-            color: #000;
+            color: #96958d;
             padding: 0px 5px;
             width: auto;
             white-space: nowrap;
         }
 
         .divider span:last-child { /* color changes in here */
-            background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000), to(transparent));
-            background-image: -webkit-linear-gradient(180deg, #000, transparent);
-            background-image: -moz-linear-gradient(180deg, #000, transparent);
-            background-image: -o-linear-gradient(180deg, #000, transparent);
-            background-image: linear-gradient(90deg, #000, transparent);
+            background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#96958d), to(transparent));
+            background-image: -webkit-linear-gradient(180deg, #96958d, transparent);
+            background-image: -moz-linear-gradient(180deg, #96958d, transparent);
+            background-image: -o-linear-gradient(180deg, #96958d, transparent);
+            background-image: linear-gradient(90deg, #96958d, transparent);
         }
