--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -24,30 +24,14 @@
 <table style="width:100%" id="tblData" class="table table-bordered table-striped mt-3">
     <thead>
     <tr>
-        <th>
-            Title
-        </th>
-        <th>
-            Author
-        </th>
-        <th>
-            Category
-        </th>
-        <th>
-            ListPrice
-        </th>
-        <th>
-            Price
-        </th>
-        <th>
-            Price50
-        </th>
-        <th>
-            Price100
-        </th>
-        <th>
-             Action
-         </th>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Category</th>
+        <th>ListPrice</th>
+        <th>Price</th>
+        <th>Price50</th>
+        <th>Price100</th>
+        <th>Action</th>
     </tr>
     </thead>
 </table>
